--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
+    "chartjs": "^0.3.24",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.0.2",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
   },
